testdata/bad/dateNegativeYear.ion
// Timestamp cannot have negative year
-2007-06-04
